--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Noise Bean</title>
 </head>
 <body>
 	<!--  header element  -->
 	<header>
 		<img src="img/avatar.jpeg">
-		<h1>Noise Bean</h1>
+		<h1>Noise Bean:</h1>
+		<h2>A Brief Noistory</h2>
 	</header>
 <!-- main element  -->
 <main>
-	<h2>Noistory</h2>
-	<p>Born in a pile of trash, this frisky feline rose to fame after being adopted, pawing his way into everyone's heart with his massive chonk, and uncontrollable screaming.</p>
+	<br>
+	<img src="img/line.png">
+	<br>
+	<h3>Born in a pile of trash, this frisky feline rose to fame after being adopted, pawing his way into everyone's heart with his massive chonk, and uncontrollable screaming.</h3>
 	<img src="img/noise.jpeg">
-	<p><i>Noise in his natural habitat</i></p>
-	<h2>Stuff About Noise</h2>
-	<ol>
+	<p style="font-size: 18px;">
+		<i>Noise in his natural habitat</i>
+		<br>
+		<br>
+		<br>
+	</p>
+	<h2 style="text-decoration: underline;">Stuff About Noise</h2>
+	<ul>
 		<li>He's fluffy</li>
 		<li>He's chonky</li>
 		<li>Quite drooly</li>
 		<li>Screams like there's no tomorrow</li>
 		<li>Smells like a dumpster</li>
 		<li>Bitey</li>
-	</ol>
+	</ul>
 
 	<!-- Friends -->
-	<h2>Noise's Friends</h2>
-	<p>While there are many people that make up Noise's friend list, there are a few that are close to his heart. Click on the links below to learn more about his friends!</p>
+	<h2 style="text-decoration: underline;">Noise's Friends</h2>
+	<h3>While there are many people that make up Noise's friend list, there are a few that are close to his heart. Click on the links below to learn more about his friends!</h3>
 	<ul>
-		<li><a href="https://www.alibaba.com/product-detail/Pet-cat-toy-Cute-Design-bird_60682638205.html">Pink Stick</a></li>
-		<li>Weed Fish<a href="https://cdn.shopify.com/s/files/1/0249/6919/products/image_291dcd2c-a036-43cd-a511-cd259328f7b8_1024x1024.jpg?v=1571438857">(Not Pictured Here)</a></li>
-		<li><a href="https://lh3.googleusercontent.com/proxy/n8oACs45VeNQvzcdZx494X5UNuRtQx6ajFm5kMGAvMUqMOTingAqgvayslhvRW5_lslUIBb-8D3bICHEjvNVAcikhQfT4daIcDA">Brown Squeaky Mouse</li>
-		<li><a href="https://images-na.ssl-images-amazon.com/images/I/41U8SEQNg6L._SS500_.jpg">Brown Mouse (Non-Squeaky)</a></li>
-		<li><a href="https://www.instagram.com/_eggyleggy/?hl=en">Egg</a></li>
+		<li><a href="https://www.alibaba.com/product-detail/Pet-cat-toy-Cute-Design-bird_60682638205.html" target="_blank">Pink Stick</a></li>
+		<li>Weed Fish<a href="https://cdn.shopify.com/s/files/1/0249/6919/products/image_291dcd2c-a036-43cd-a511-cd259328f7b8_1024x1024.jpg?v=1571438857" target="_blank">(Not Pictured Here)</a></li>
+		<li><a href="https://lh3.googleusercontent.com/proxy/n8oACs45VeNQvzcdZx494X5UNuRtQx6ajFm5kMGAvMUqMOTingAqgvayslhvRW5_lslUIBb-8D3bICHEjvNVAcikhQfT4daIcDA" target="_blank">Brown Squeaky Mouse</li>
+		<li><a href="https://images-na.ssl-images-amazon.com/images/I/41U8SEQNg6L._SS500_.jpg" target="_blank">Brown Mouse (Non-Squeaky)</a></li>
+		<li><a href="https://www.instagram.com/_eggyleggy/?hl=en" target="_blank">Egg</a></li>
 
 	</ul>
+<br>
 
 </main>
 
 <!-- Footer Element -->
 	<footer>
-		<p>This site is powered by cats, obvisously.</p>
+	<p><i>~ this site is powered by cats, obvisously ~</i></p>
 	</footer>
 </body>
 </html>
