--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Noise Bean</title>
+	<link rel="icon" href="img/favicon.png">
 </head>
 <body>
 	<!--  header element  -->
